--- a/htc/src/index.html
+++ b/htc/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class="app" style="background-color: var(--ice-blue);">
 <app-root></app-root>
 </body>
 </html>
