--- a/htc/src/index.html
+++ b/htc/src/index.html
@@ -10,7 +10,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cuprum&display=swap" rel="stylesheet">
 
+
 </head>
+<base href="/htc/">
 <body class="app" style="background-color: var(--ice-blue);">
 <app-root></app-root>
 </body>
