--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <base href="/htc/">
-<body class="app">
+<body class="app" style="background-color: #e9ecef">
 <app-root></app-root>
 </body>
 </html>
