--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,6 +13,7 @@
 
   <script type="module" src="https://cdn-1.forte.kz/assets/plugins/forte-ecom-qa/v1/ecom-widget/ecom-widget.esm.js"></script>
   <script nomodule src="https://cdn-1.forte.kz/assets/plugins/forte-ecom-qa/v1/ecom-widget/ecom-widget.js"></script>
+  <!--<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>-->
 
 </head>
 <base href="/htc/">
