--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum&display=swap" rel="stylesheet">
 </head>
 <base href="/htc/">
-<body class="app" style="background-color: #e9ecef">
-<app-root></app-root>
+<body class="app">
+<app-root style="background-color: #e9ecef"></app-root>
 </body>
 </html>
