--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,6 +12,6 @@
 </head>
 <base href="/htc/">
 <body class="app">
-<app-root style="background-color: #e9ecef"></app-root>
+<app-root></app-root>
 </body>
 </html>
