--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum&display=swap" rel="stylesheet">
 </head>
 <base href="/htc/">
-<body >
+<body class="app">
 <app-root></app-root>
 </body>
 </html>
